...
                android:layout_below="@id/text_taken_up"
                android:text="@string/text_creators_text"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_subject_creators"
            android:text="@string/btn_choose_text"/>

    </RelativeLayout>
...
